# wasm-workshop

./: sum.wat
components/rsa/alice/: index.js  main.py  network.js  network.py  package-lock.json  package.json
components/rsa/alice/crypto/: crypto.core.wasm  crypto.d.ts  crypto.js
components/rsa/bob/: Cargo.toml
components/rsa/bob/src/: bob.rs  host.rs  main.rs  network.rs
components/rsa/crypto/: Cargo.toml  crypto.wasm
components/rsa/crypto/src/: bindings.rs  lib.rs
components/rsa/crypto/wit/: world.wit
example1/: run.sh  sum.wat
example2/: hello.wat  main.py  main.rs  makefile
