[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }
rsa = "0.9.8" 
rand = "0.9.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:crypto"

[package.metadata.component.dependencies]
